# trading-ctrader-fix-api-example

./: .env.example  CLAUDE.md  README.md  config.py  ctrader_client.py  example_trade.py  fix_protocol.py  pyproject.toml
src/: backtest.py  calculations.py  ctrader_client.py  example_trade.py  fix_protocol.py  history.py  main.py  market_data.py  strategy.py
src/ctrader_fix/: __init__.py  ctrader_client.py  example_trade.py  fix_protocol.py  stream_buffer.py  symbols.py
tests/: test_backtest.py  test_login_timeout.py  test_market_data.py  test_pipeline.py  test_strategy.py  test_tick_stream.py
