[project]
name = "trading-ctrader-fix-api-example"
version = "0.1.0"
description = "Multi-timeframe RSI trading bot for cTrader over the FIX API (fork of ejtraderCT)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ctrader-example = "ctrader_fix.example_trade:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctrader_fix"]
